--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web",
   "version": "0.0.0",
-  "homepage":"https://shubhlpu16.github.io/notes-react/"
+  "homepage":"https://shubhlpu16.github.io/notes-react/",
   "private": true,
   "engines": {
     "node": ">=8.16.2",
